Small edit in sortableList

--- a/examples/notebooks/vuetify/sortableList.ipynb
+++ b/examples/notebooks/vuetify/sortableList.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6176d1d7",
+   "id": "917071fd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
     "\n",
     "\n",
     "# Content of an item\n",
-    "def itemContent(item):\n",
+    "def itemContent(item, index):\n",
     "    return [\n",
     "        v.CardSubtitle(class_=\"mb-n4\", children=[item['name']]),\n",
     "        v.CardText(    class_=\"mt-n2\", children=[item['email']])\n",
@@ -41,7 +41,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "81f86cdc",
+   "id": "a405f4b5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
     "\n",
     "\n",
     "# Content of an item\n",
-    "def itemContent(item):\n",
+    "def itemContent(item, index):\n",
     "    \n",
     "    def onvalue(widget, event, data):\n",
     "        item[\"value\"] = int(data)\n",
@@ -102,7 +102,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4a9b0f5b",
+   "id": "39494742",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +112,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ae0983ea",
+   "id": "9d9611ec",
    "metadata": {},
    "outputs": [],
    "source": []
