--- a/vois/vuetify/sortableListTest.ipynb
+++ b/vois/vuetify/sortableListTest.ipynb
@@ -2,25 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 63,
-   "id": "ac9cc71f",
+   "execution_count": null,
+   "id": "9e86dc9d",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "12073266180244df8aaf6708cec07927",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Html(children=[VBox(children=(Output(layout=Layout(max_height='600px')), Output()))], tag='div')"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Simple example\n",
     "%run sortableList.py\n",
@@ -41,7 +26,7 @@
     "\n",
     "\n",
     "# Content of an item\n",
-    "def itemContent(item):\n",
+    "def itemContent(item, index):\n",
     "    return [\n",
     "        v.CardSubtitle(class_=\"mb-n4\", children=[item['name']]),\n",
     "        v.CardText(    class_=\"mt-n2\", children=[item['email']])\n",
@@ -53,63 +38,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
-   "id": "8aa55f84",
+   "execution_count": null,
+   "id": "f19aa9cd",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[{'name': 'new', 'email': 'empty'},\n",
-       " {'name': 'Jane Adams', 'email': 'jane@adams.com'},\n",
-       " {'name': 'Paul Davis', 'email': 'paul@davis.com'},\n",
-       " {'name': 'Amanda Brown', 'email': 'amanda@brown.com'}]"
-      ]
-     },
-     "execution_count": 65,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "s.items"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "ccf7589e",
+   "execution_count": null,
+   "id": "fec875e7",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "987a584ada4940bba6438912f4d40b89",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Html(children=[VBox(children=(Output(layout=Layout(max_height='600px')), Output()))], tag='div')"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "767ac97e14e746529ebc38283ada41f2",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Output()"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "%run switch.py\n",
     "%run datePicker.py\n",
@@ -150,7 +92,7 @@
     "\n",
     "\n",
     "# Content of an item\n",
-    "def itemContent(item):\n",
+    "def itemContent(item, index):\n",
     "    \n",
     "    def onname(widget, event, data):\n",
     "        item[\"name\"] = int(data)\n",
@@ -195,7 +137,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "967d2d94",
+   "id": "c3575e5d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,25 +146,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
-   "id": "e48ffd29",
+   "execution_count": null,
+   "id": "9498c8d4",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "17e86253c9f8438a9809a7cc5712cf00",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Html(children=[VBox(children=(Output(layout=Layout(max_height='900px')), Output()))], tag='div')"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Simple example with one of the item always active\n",
     "%run sortableList.py\n",
@@ -244,7 +171,7 @@
     "\n",
     "\n",
     "# Content of an item\n",
-    "def itemContent(item):\n",
+    "def itemContent(item, index):\n",
     "    return [\n",
     "        v.CardSubtitle(class_=\"mb-n4\", children=[item['name']]),\n",
     "        v.CardText(    class_=\"mt-n2\", children=[item['email']])\n",
@@ -267,7 +194,7 @@
     "def itemRemoveAll(widget, event, data):\n",
     "    s.items = []\n",
     "\n",
-    "reset = v.Btn(icon=True, dark=dark, children=[v.Icon(children=['mdi-playlist-remove'])])\n",
+    "reset = v.Btn(icon=True, children=[v.Icon(children=['mdi-playlist-remove'])])\n",
     "reset.on_event('click', itemRemoveAll)\n",
     "    \n",
     "# Removing an item\n",
@@ -298,29 +225,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
-   "id": "76b5300c",
+   "execution_count": null,
+   "id": "1bc93c39",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1"
-      ]
-     },
-     "execution_count": 106,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "s.active"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
-   "id": "b5c46726",
+   "execution_count": null,
+   "id": "55711efe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -330,7 +246,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0d41eb13",
+   "id": "0a85cee1",
    "metadata": {},
    "outputs": [],
    "source": []
