--- a/vois/vuetify/dialogGenericTest.ipynb
+++ b/vois/vuetify/dialogGenericTest.ipynb
@@ -2,10 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "ff346eee",
+   "execution_count": 1,
+   "id": "352a6a44",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "a5b8d4afc049486ea00be5e673082c2d",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output(layout=Layout(height='0px', width='0px'))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "from ipywidgets import widgets, Layout, HTML\n",
     "from IPython.display import display\n",
@@ -37,7 +52,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "08297178",
+   "id": "27e46eb0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +62,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "92d1202b",
+   "id": "90cc6c63",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +72,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "79a7bdc0",
+   "id": "3744e045",
    "metadata": {},
    "outputs": [],
    "source": []
