--- a/vois/vuetify/sortableListTest.ipynb
+++ b/vois/vuetify/sortableListTest.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9e86dc9d",
+   "id": "f8c058bf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f19aa9cd",
+   "id": "38271442",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,10 +49,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fec875e7",
+   "id": "40ea17a4",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Sortable list with complex content\n",
     "%run switch.py\n",
     "%run datePicker.py\n",
     "%run sortableList.py\n",
@@ -137,7 +138,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c3575e5d",
+   "id": "e67f31c1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,10 +147,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "9498c8d4",
+   "execution_count": 17,
+   "id": "ca82739e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "a500cfd927e14f4c89abc4fd830e230d",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Html(children=[VBox(children=(Output(layout=Layout(max_height='900px')), Output()))], tag='div')"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# Simple example with one of the item always active\n",
     "%run sortableList.py\n",
@@ -226,7 +242,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1bc93c39",
+   "id": "e67a987a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,7 +252,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "55711efe",
+   "id": "8dc510d0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -246,7 +262,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0a85cee1",
+   "id": "57dbc390",
    "metadata": {},
    "outputs": [],
    "source": []
