--- a/vois/vuetify/sliderFloatTest.ipynb
+++ b/vois/vuetify/sliderFloatTest.ipynb
@@ -3,14 +3,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5a1dde6b",
+   "id": "10b84163",
    "metadata": {},
    "outputs": [],
    "source": [
     "from ipywidgets import widgets\n",
     "from IPython.display import display\n",
     "\n",
-    "%run opacity.py\n",
+    "%run sliderFloat.py\n",
     "\n",
     "output = widgets.Output()\n",
     "\n",
@@ -18,25 +18,56 @@
     "    with output:\n",
     "        print(value)\n",
     "\n",
-    "o = opacity(0.8, text='Fill opacity:', onchange=onchange)\n",
-    "display(o.draw())\n",
+    "s = sliderFloat(1.8, text='Select Value in [1.0,3.0]:', minvalue=1.0, maxvalue=3.0, showpercentage=False, decimals=2, onchange=onchange)\n",
+    "display(s.draw())\n",
     "display(output)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e2aa9217",
+   "id": "7e3172cd",
    "metadata": {},
    "outputs": [],
    "source": [
-    "o.value = 0.35"
+    "s.value = 2.35"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6aa0180f",
+   "id": "5fa3f0a6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "927c98ca",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from ipywidgets import widgets\n",
+    "from IPython.display import display\n",
+    "\n",
+    "%run sliderFloat.py\n",
+    "\n",
+    "output = widgets.Output()\n",
+    "\n",
+    "def onchange(value):\n",
+    "    with output:\n",
+    "        print(value)\n",
+    "\n",
+    "s = sliderFloat(0.8, text='Fill opacity:', onchange=onchange)\n",
+    "display(s.draw())\n",
+    "display(output)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f39fc760",
    "metadata": {},
    "outputs": [],
    "source": []
