Added labelwidth to sliderFloat

--- a/vois/vuetify/sliderFloatTest.ipynb
+++ b/vois/vuetify/sliderFloatTest.ipynb
@@ -2,10 +2,39 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "10b84163",
+   "execution_count": 7,
+   "id": "4aab110b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "86070e3cf66347859d363743f9a4376a",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Row(children=[Html(children=['Select Value in [1.0,3.0]:'], class_='pa-0 ma-0 mt-4', style_='width: 200px; min…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "f7bc7adb25c7498a923d49d403243427",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "from ipywidgets import widgets\n",
     "from IPython.display import display\n",
@@ -18,7 +47,7 @@
     "    with output:\n",
     "        print(value)\n",
     "\n",
-    "s = sliderFloat(1.8, text='Select Value in [1.0,3.0]:', minvalue=1.0, maxvalue=3.0, showpercentage=False, decimals=2, onchange=onchange)\n",
+    "s = sliderFloat(1.8, text='Select Value in [1.0,3.0]:', minvalue=1.0, maxvalue=3.0, showpercentage=False, decimals=2, labelwidth=200, onchange=onchange)\n",
     "display(s.draw())\n",
     "display(output)"
    ]
@@ -26,7 +55,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7e3172cd",
+   "id": "528237b2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +65,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5fa3f0a6",
+   "id": "5811185a",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -44,7 +73,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "927c98ca",
+   "id": "768f0776",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +96,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f39fc760",
+   "id": "1f2c90e3",
    "metadata": {},
    "outputs": [],
    "source": []
