Added maxint parameter to sliderFloat

--- a/vois/vuetify/sliderFloatTest.ipynb
+++ b/vois/vuetify/sliderFloatTest.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "4aab110b",
+   "id": "b10bb8e3",
    "metadata": {},
    "outputs": [
     {
@@ -55,7 +55,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "528237b2",
+   "id": "9a1f5b74",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5811185a",
+   "id": "dae51fe1",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -73,7 +73,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "768f0776",
+   "id": "f8fa9385",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +96,67 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1f2c90e3",
+   "id": "cd56936f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "0af0a47a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "57c360f66d22438ab5d9144f82220bb9",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Row(children=[Html(children=['Select Value in [0.0,360.0]:'], class_='pa-0 ma-0 mt-4', style_='width: 200px; m…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "a08c5d0d22ec4acd84ed78983cb91981",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "from ipywidgets import widgets\n",
+    "from IPython.display import display\n",
+    "\n",
+    "%run sliderFloat.py\n",
+    "\n",
+    "output = widgets.Output()\n",
+    "\n",
+    "def onchange(value):\n",
+    "    with output:\n",
+    "        print(value)\n",
+    "\n",
+    "s = sliderFloat(45.0, text='Select Value in [0.0,360.0]:', minvalue=0.0, maxvalue=360.0, maxint=360, showpercentage=False, decimals=0, labelwidth=200, onchange=onchange)\n",
+    "display(s.draw())\n",
+    "display(output)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "21be57e6",
    "metadata": {},
    "outputs": [],
    "source": []
