--- a/vois/vuetify/sliderFloatTest.ipynb
+++ b/vois/vuetify/sliderFloatTest.ipynb
@@ -2,19 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "b10bb8e3",
+   "execution_count": 8,
+   "id": "0f590092",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "86070e3cf66347859d363743f9a4376a",
+       "model_id": "aef5b1ffdbab41f1a1a906fdb40404a8",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Row(children=[Html(children=['Select Value in [1.0,3.0]:'], class_='pa-0 ma-0 mt-4', style_='width: 200px; min…"
+       "Card(children=[Row(children=[Html(children=['Select Value in [1.0,3.0]:'], class_='pa-0 ma-0 mt-4', style_='wi…"
       ]
      },
      "metadata": {},
@@ -23,7 +23,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f7bc7adb25c7498a923d49d403243427",
+       "model_id": "edd57a772d4b494889cc1198bbae3910",
        "version_major": 2,
        "version_minor": 0
       },
@@ -55,7 +55,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9a1f5b74",
+   "id": "4b065833",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dae51fe1",
+   "id": "18a86e6f",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -73,7 +73,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f8fa9385",
+   "id": "5ecbdae3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,46 +96,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cd56936f",
+   "id": "0c8d6f20",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "0af0a47a",
+   "execution_count": null,
+   "id": "42fb8bd0",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "57c360f66d22438ab5d9144f82220bb9",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Row(children=[Html(children=['Select Value in [0.0,360.0]:'], class_='pa-0 ma-0 mt-4', style_='width: 200px; m…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a08c5d0d22ec4acd84ed78983cb91981",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Output()"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from ipywidgets import widgets\n",
     "from IPython.display import display\n",
@@ -156,7 +127,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "21be57e6",
+   "id": "48197e9c",
    "metadata": {},
    "outputs": [],
    "source": []
