--- a/vois/vuetify/dialogGenericTest.ipynb
+++ b/vois/vuetify/dialogGenericTest.ipynb
@@ -2,25 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "352a6a44",
+   "execution_count": null,
+   "id": "edb9d269",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a5b8d4afc049486ea00be5e673082c2d",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Output(layout=Layout(height='0px', width='0px'))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from ipywidgets import widgets, Layout, HTML\n",
     "from IPython.display import display\n",
@@ -33,6 +18,7 @@
     "import switch\n",
     "\n",
     "def on_s_change(value):\n",
+    "    dlg.okdisabled = False\n",
     "    print(value)\n",
     "\n",
     "def on_ok():\n",
@@ -46,13 +32,15 @@
     "dlg = dialogGeneric(title='Settings', text='Please select the format for download:', show=True,\n",
     "                    addclosebuttons=False, width=600, persistent=True, #dark=True, \n",
     "                    addokcancelbuttons=True, on_ok=on_ok, on_cancel=on_cancel,\n",
-    "                    fullscreen=False, content=[s.draw()], output=output)"
+    "                    fullscreen=False, content=[s.draw()], output=output)\n",
+    "\n",
+    "dlg.okdisabled = True"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "27e46eb0",
+   "id": "29715899",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +50,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "90cc6c63",
+   "id": "22c47d2c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3744e045",
+   "id": "e57bbd1f",
    "metadata": {},
    "outputs": [],
    "source": []
