--- a/vois/vuetify/paletteEditorTest.ipynb
+++ b/vois/vuetify/paletteEditorTest.ipynb
@@ -2,10 +2,39 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "21659da5",
+   "execution_count": 1,
+   "id": "73d5f9d0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "9b942f1a484644d88366cde2f1321e56",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output(layout=Layout(height='800px', width='500px'))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "3ab3886d3d9b4e4da3260b4a9cbe0340",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "import settings\n",
     "settings.dark_mode      = False\n",
@@ -37,7 +66,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e74b9f60",
+   "id": "99f40c0f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +76,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aeddfa39",
+   "id": "905132e8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +86,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c15963b4",
+   "id": "050688b6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +96,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d11aabf4",
+   "id": "a9915857",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +106,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "122ac1e7",
+   "id": "432080cc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +139,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "87a5e1f3",
+   "id": "16df482c",
    "metadata": {},
    "outputs": [],
    "source": []
