--- a/vois/vuetify/palettePickerTest.ipynb
+++ b/vois/vuetify/palettePickerTest.ipynb
@@ -2,39 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "ffb36c27",
+   "execution_count": null,
+   "id": "136ee473",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "635cb82357a84db4895eec97313b231f",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(Html(children=[Select(background_color='white', chips=False, class_='pa-0 mx-0 my-1 mb-n4', cle…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f3cf2de2bd084a0990675bd83b093c9d",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Output()"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "%run palettePicker.py\n",
     "%run selectSingle.py\n",
@@ -90,7 +61,7 @@
     "sel = selectSingle('Family:', families, selection=family, width=160, onchange=onchangeFamily, marginy=1, clearable=False)\n",
     "sw  = switch(interpolate, \"Interpolate\", onchange=onchangeInterpolate)\n",
     "\n",
-    "p = palettePicker(family=family, custompalettes=custompalettes, label='Palette:', height=26, onchange=onchangePalette)\n",
+    "p = palettePicker(family=family, custompalettes=custompalettes, label='Palette:', clearable=False, height=26, onchange=onchangePalette)\n",
     "\n",
     "spacer = v.Html(tag='div',children=[' '], style_='width: 10px;')\n",
     "\n",
@@ -101,7 +72,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1fe16a88",
+   "id": "2b46a273",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +82,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "30c39a50",
+   "id": "3dda76e0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +92,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "55c37b73",
+   "id": "b562a939",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,8 +101,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "c9e334c8",
+   "execution_count": null,
+   "id": "d221ce5d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +112,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "02d52412",
+   "id": "121ce584",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,7 +122,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "56038065",
+   "id": "944a85cd",
    "metadata": {},
    "outputs": [],
    "source": []
