Added the palettePickerEx widget

--- a/vois/vuetify/palettePickerTest.ipynb
+++ b/vois/vuetify/palettePickerTest.ipynb
@@ -3,10 +3,37 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "136ee473",
+   "id": "fdc2ac20",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Simple palette picker\n",
+    "%run palettePicker.py\n",
+    "\n",
+    "import ipyvuetify as v\n",
+    "from ipywidgets import widgets\n",
+    "from IPython.display import display\n",
+    "\n",
+    "output = widgets.Output()\n",
+    "\n",
+    "def onchangePalette():\n",
+    "    with output:\n",
+    "        print(\"Palette changed to\", p.value, p.colors)\n",
+    "\n",
+    "p = palettePicker(label='Palette:', clearable=False, height=26, onchange=onchangePalette)\n",
+    "\n",
+    "display(p.draw())\n",
+    "display(output)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c177d34a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Complex palette picker also managing the families\n",
     "%run palettePicker.py\n",
     "%run selectSingle.py\n",
     "%run switch.py\n",
@@ -72,7 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2b46a273",
+   "id": "3712e9d3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +109,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3dda76e0",
+   "id": "3e4779bf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +119,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b562a939",
+   "id": "218f51a0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +129,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d221ce5d",
+   "id": "27846196",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +139,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "121ce584",
+   "id": "e607a718",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +149,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "944a85cd",
+   "id": "0f26cc3a",
    "metadata": {},
    "outputs": [],
    "source": []
