--- a/docs/3.2_referenceVuetify.rst
+++ b/docs/3.2_referenceVuetify.rst
@@ -174,6 +174,14 @@ palettePicker widget
 
 .. image:: figures/line.png
 
+palettePickerEx widget
+----------------------
+
+.. automodule:: palettePickerEx
+    :members: 
+
+.. image:: figures/line.png
+
 progress widget
 ---------------
 
