Added properties to palettePickerEx

--- a/vois/vuetify/palettePickerExTest.ipynb
+++ b/vois/vuetify/palettePickerExTest.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "891b14fc",
+   "id": "14e83179",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "17eb0d2f",
+   "id": "426775f6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,27 +35,36 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3bb6fb29",
+   "id": "7abe8a9e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "p.p.value"
+    "p.familyname = 'diverging'\n",
+    "p.value = 'RdYlGn'"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9eabaeeb",
+   "id": "eef29c58",
    "metadata": {},
    "outputs": [],
    "source": [
-    "p.p.colors"
+    "p.colors"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6d486526",
+   "id": "710bac71",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c239f4de",
    "metadata": {},
    "outputs": [],
    "source": []
