Added newButtonOnTop flag to sortableList widget

--- a/vois/vuetify/sortableListTest.ipynb
+++ b/vois/vuetify/sortableListTest.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f8c058bf",
+   "id": "c66294f0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,14 +32,14 @@
     "        v.CardText(    class_=\"mt-n2\", children=[item['email']])\n",
     "    ]\n",
     "\n",
-    "s = sortableList(items=items, width=400, dark=False, allowNew=True, itemNew=itemNew, newOnTop=True, itemContent=itemContent)\n",
+    "s = sortableList(items=items, width=400, dark=False, allowNew=True, itemNew=itemNew, newOnTop=True, newButtonOnTop=False, itemContent=itemContent)\n",
     "s.draw()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "38271442",
+   "id": "80e3849d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "40ea17a4",
+   "id": "05191d16",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +138,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e67f31c1",
+   "id": "69a2c281",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,25 +147,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "ca82739e",
+   "execution_count": null,
+   "id": "1e4f8c17",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a500cfd927e14f4c89abc4fd830e230d",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Html(children=[VBox(children=(Output(layout=Layout(max_height='900px')), Output()))], tag='div')"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Simple example with one of the item always active\n",
     "%run sortableList.py\n",
@@ -242,7 +227,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e67a987a",
+   "id": "db5973cc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -252,7 +237,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8dc510d0",
+   "id": "e9d5ab56",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -262,7 +247,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "57dbc390",
+   "id": "3dca161f",
    "metadata": {},
    "outputs": [],
    "source": []
