--- a/vois/vuetify/sortableListTest.ipynb
+++ b/vois/vuetify/sortableListTest.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c66294f0",
+   "id": "64047a55",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "80e3849d",
+   "id": "515894bd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "05191d16",
+   "id": "f5fee3a9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +138,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "69a2c281",
+   "id": "3ebb0321",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,10 +147,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "1e4f8c17",
+   "execution_count": 1,
+   "id": "6585bebb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "bd58de585afa4dbdba26bf5a4f2e2f73",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Html(children=[VBox(children=(Output(layout=Layout(max_height='900px')), Output()))], tag='div')"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# Simple example with one of the item always active\n",
     "%run sortableList.py\n",
@@ -227,7 +242,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "db5973cc",
+   "id": "c1de19da",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,7 +252,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e9d5ab56",
+   "id": "bcf13772",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -247,7 +262,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3dca161f",
+   "id": "fb986305",
    "metadata": {},
    "outputs": [],
    "source": []
